--- a/practica16.ipynb
+++ b/practica16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b047e57f",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "8cc7d1d7",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "08f60dfb",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "7af67e4c",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "14736212",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "2e08f6e0",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "c2294503",
    "metadata": {},
    "outputs": [
@@ -295,6 +295,60 @@
     "print(f\"¿Existe el numero 40?: {buscar(raiz, 40)}\")\n",
     "print(f\"¿Existe el numero 60?: {buscar(raiz, 60)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a34d4412",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valores en Orden:\n",
+      "3 5 7 10 12 15 20 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# v. Recorrido del arbol (InORden)\n",
+    "#Inorden = izq -> raiz -> derecho\n",
+    "#Esto nos da los numeros ordenados de menor a mayor\n",
+    "\n",
+    "\n",
+    "def recorrido_inorden(raiz):\n",
+    "    if raiz is None:\n",
+    "        return\n",
+    "    \n",
+    "    #1. Primerp el sub arbol izquierdo\n",
+    "    recorrido_inorden(raiz.iz)\n",
+    "    #2. Luego la raiz\n",
+    "    print(raiz.valor, end= \" \")\n",
+    "    #3 Por ultimo derecha\n",
+    "    recorrido_inorden(raiz.der)\n",
+    "\n",
+    "\n",
+    "#Crear arbol desordenado:\n",
+    "raiz = None\n",
+    "for valor in [10,5,15,3,7,12,20]:\n",
+    "    raiz = insertar(raiz, valor)\n",
+    "\n",
+    "\n",
+    "#Imprimer valores InOrden}\n",
+    "print(\"Valores en Orden:\")\n",
+    "recorrido_inorden(raiz)\n",
+    "print()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c69bf8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
